--- a/1606.07301/urbanowski-xxx-2016-1a.tex
+++ b/1606.07301/urbanowski-xxx-2016-1a.tex
@@ -8,17 +8,60 @@
 \usepackage[english]{babel}
 \usepackage{graphics}
 \usepackage{graphicx}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+%\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
 \pagestyle{plain}
-\pagenumbering{arabic}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
-\title{The true quantum face of the "exponential" decay law}
+\title{The true quantum face of the ``exponential'' decay law}
 \author{K. Urbanowski\footnote{e--mail:  K.Urbanowski@if.uz.zgora.pl}, \\
 \hfill\\
 University of Zielona G\'{o}ra, Institute of Physics, \\
 ul. Prof. Z. Szafrana 4a, 65--516 Zielona G\'{o}ra, Poland.
 }
-%\date{}
+\date{23 Jun 2016 }
 \maketitle
 
 %\pacs{03.65.-w}{Quantum Mechanics}
@@ -29,14 +72,15 @@ ul. Prof. Z. Szafrana 4a, 65--516 Zielona G\'{o}ra, Poland.
 Results of theoretical studies of the quantum unstable systems caused that
 there are rather widespread belief that a universal feature od the quantum decay process is the presence of three
 time regimes of the decay process:
-the early time (initial) leading to the Quantum Zeno (or Anti Zeno) Effects, "exponential" (or "canonical") described by the decay law of the exponential form, and late time characterized by the decay law having inverse--power law form. Based on the fundamental principles of the quantum theory
+the early time (initial) leading to the Quantum Zeno (or Anti Zeno) Effects, ``exponential'' (or ``canonical'') described by the decay law of the exponential form, and late time characterized by the decay law having inverse--power law form. Based on the fundamental principles of the quantum theory
 we give the proof that there is no time interval in which the survival probability (decay law) could be a decreasing function of time of the purely exponential form
-but even at the "exponential" regime the decay curve is oscillatory modulated
+but even at the ``exponential'' regime the decay curve is oscillatory modulated
 with a smaller or a large amplitude of oscillations depending on parameters of the model considered.
 \end{abstract}
 \noindent
 {\bf PACS:} 03.65.-w, 03.65.Ca, 11.10.St \\
 
+\newpage
 
 \section{Introduction}
 
@@ -56,10 +100,10 @@ There was many unsuccessful attempts to verify experimentally predicted deviatio
 All these results of theoretical and experimental researches caused that
 there are rather widespread belief that a universal feature of the quantum decay process is the presence of three
 time regimes of such a decay process:
-the early time (initial), exponential (or "canonical"), and late time having inverse--power law form \cite{peshkin}.
+the early time (initial), exponential (or ``canonical''), and late time having inverse--power law form \cite{peshkin}.
 This  belief is reinforced by a numerous presentations in the literature of decay curves obtained for quantum models of unstable systems. The typical form of such a decay curve one can find in Fig. (\ref{f1}).
 In this context, each experimental  evidence of oscillating decay curve at times of the order of life time is considered as an anomaly caused by a new quantum effects or new interactions (see eg. \cite{litwinov1,kienle}).
-The question arises, if indeed in the case of one component quantum unstable systems these oscillations of the decay process at the "exponential" regime are an anomaly, or perhaps universal feature of quantum decay processes.
+The question arises, if indeed in the case of one component quantum unstable systems these oscillations of the decay process at the ``exponential'' regime are an anomaly, or perhaps universal feature of quantum decay processes.
 Here
 we give the proof that there is no time interval in which the survival probability (decay law) could be a decreasing function of time of the purely exponential form.
 We also show that even in the case of a single component unstable system the decay  curve has an oscillatory form with a smaller or a large amplitude of oscillations depending on the model considered.
@@ -170,7 +214,7 @@ $\omega (E) \equiv \omega_{BW} (E)$,
 (\frac{{\it\Gamma}_{0}}{2})^{2}}, \label{omega-BW}
 \end{equation}
 where $N$ is a normalization constant.
-\begin{figure}[h!]
+\begin{figure}[t]
 \begin{center}
 \includegraphics[width=68mm]{f1a.eps}\\
 \caption{Decay curves obtained for $\omega_{BW}(E)$ given by Eq. (\ref{omega-BW}).
@@ -185,7 +229,7 @@ The case $\omega (E) = \omega_{BW}(E)$ is the typical case considered  in  numer
 and used therein  to model decay processes:
 %%%
 Among others, the Breit--Wigner model is often used to justify a belief  that there exists 
-the "exponential time regime" of the decay process (see eg. \cite{peshkin,sluis} and Fig (\ref{f1})).
+the ``exponential time regime'' of the decay process (see eg. \cite{peshkin,sluis} and Fig (\ref{f1})).
 %%%%
 Therefore it is very important to analyze real form of the decay curves obtained using
 $\omega (E) = \omega_{BW}(E)$ and this is why we consider this case in this paper. What is more,
@@ -352,14 +396,14 @@ Within the approach considered in this paper  for any time interval $[t_{1},t_{2
 \section{Final remarks}
 Summing up the oscillating decay curves of  one component unstable system can not be considered as something extraordinary or as anomaly: It seems to be a universal
 feature of the decay process.
-Oscillatory modulated decay curves are usually observed in two-- or more component unstable systems. A typical example of such systems is a neutral meson complex. From the results presented above it follows that such an effect can be also  observed in one component quantum unstable systems at the "exponential" decay regimes of times. What is more the oscillatory modulation of decay curves at the "exponential" decays regime takes place even in the quantum unstable system modeled by the Breit--Wigner distribution of the energy density.
+Oscillatory modulated decay curves are usually observed in two-- or more component unstable systems. A typical example of such systems is a neutral meson complex. From the results presented above it follows that such an effect can be also  observed in one component quantum unstable systems at the ``exponential'' decay regimes of times. What is more the oscillatory modulation of decay curves at the ``exponential'' decays regime takes place even in the quantum unstable system modeled by the Breit--Wigner distribution of the energy density.
 In general,
- the oscillatory modulation of the survival probability at the "exponential" decay regime and thus the decay curves with model depending amplitude and oscillations period
+ the oscillatory modulation of the survival probability at the ``exponential'' decay regime and thus the decay curves with model depending amplitude and oscillations period
 takes place even in the case of one component unstable systems
 modeled by  any physically acceptable form of $\omega (E)$.
-From results of the model calculations presented in Figs (\ref{f2}) and (\ref{f3}) it follows that at the initial stage of the "exponential" (or "canonical") decay regime
+From results of the model calculations presented in Figs (\ref{f2}) and (\ref{f3}) it follows that at the initial stage of the ``exponential'' (or ``canonical'') decay regime
 the amplitude of these oscillations  may be much less than the accuracy of detectors. Then  with increasing time  the amplitude of oscillations grows (see Fig. (\ref{f3})), which increases the chances of observing them.
-This is a true quantum picture of the decay process at the so--called "exponential" regime of times which should be taken into account when interpreting decay experiments
+This is a true quantum picture of the decay process at the so--called ``exponential'' regime of times which should be taken into account when interpreting decay experiments
 with one component unstable systems.
 
 
