--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-02 08:57:14 -0400 
+%% Created for Pete Su at 2023-08-02 09:09:49 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Urbanowski2017,
+	author = {Krzysztof Urbanowski},
+	date-added = {2023-08-02 09:08:52 -0400},
+	date-modified = {2023-08-02 09:09:15 -0400},
+	doi = {10.1140/epjd/e2017-70666-0},
+	journal = {Eur. Phys. J. D},
+	note = {\href{https://arxiv.org/abs/1606.07301}{arxiv:1606.07301}},
+	number = {5},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {True quantum face of the {\textquotedblleft}exponential{\textquotedblright} decay law},
+	url = {https://doi.org/10.1140%2Fepjd%2Fe2017-70666-0},
+	volume = {71},
+	year = 2017,
+	bdsk-url-1 = {https://doi.org/10.1140%2Fepjd%2Fe2017-70666-0},
+	bdsk-url-2 = {https://doi.org/10.1140/epjd/e2017-70666-0}}
 
 @misc{Torre2018FormalismNotes,
 	author = {Charles Torre},
@@ -6034,20 +6050,6 @@
 	year = {1998},
 	bdsk-url-1 = {https://doi.org/10.1080/02698599808573600}}
 
-@article{Vaidman:1996uf,
-	archiveprefix = {arXiv},
-	author = {Vaidman, Lev},
-	date-added = {2019-03-09 15:32:33 -0500},
-	date-modified = {2023-07-26 10:06:51 -0400},
-	eprint = {quant-ph/9609006},
-	journal = {arXiv},
-	note = {\href{https://arxiv.org/abs/quant-ph/9609006}{arxiv:9609006}},
-	primaryclass = {quant-ph},
-	reportnumber = {TAUP-2058-93},
-	slaccitation = {%%CITATION = QUANT-PH/9609006;%%},
-	title = {{On schizophrenic experiences of the neutron or why we should believe in the many worlds interpretation of quantum theory}},
-	year = {1996}}
-
 @article{Naaman-Marom2012,
 	abstract = {The de Broglie--Bohm interpretation of quantum mechanics assigns positions and trajectories to particles. We analyze the validity of a formula for the velocities of Bohmian particles which makes the analysis of these trajectories particularly simple. We apply it to particle detectors of four different types and show that the detectors of three of these types lead to ``surrealistic trajectories'', i.e., leave a trace where the Bohmian particle was not present.},
 	author = {Gillie Naaman-Marom and Noam Erez and Lev Vaidman},
@@ -6975,10 +6977,10 @@ horizon.},
 	title = {{An Introduction to String Theory}},
 	year = {2011}}
 
-@booklet{Torre2018,
+@misc{Torre2018,
 	author = {Torre, Charles},
 	date-added = {2019-02-10 13:37:26 +0000},
-	date-modified = {2023-08-02 08:49:46 -0400},
+	date-modified = {2023-08-02 09:07:07 -0400},
 	howpublished = {Lecture Notes},
 	note = {{\href{http://www.physics.usu.edu/torre/QFT/Lectures/QFT_text.pdf}{http://www.physics.usu.edu/torre/QFT/Lectures/QFT\_text.pdf}}},
 	title = {What is a Photon? {Foundations of Quantum Field Theory}},
