--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,50 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-02 09:09:49 -0400 
+%% Created for Pete Su at 2023-08-02 09:22:29 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Von-Neumann1955,
+	author = {{Von Neumann}, John},
+	date-added = {2023-08-02 09:21:51 -0400},
+	date-modified = {2023-08-02 09:22:18 -0400},
+	isbn = {9780691028934},
+	lccn = {53010143},
+	publisher = {Princeton University Press},
+	title = {Mathematical Foundations of Quantum Mechanics},
+	url = {https://books.google.com/books?id=JLyCo3RO4qUC},
+	year = {1955},
+	bdsk-url-1 = {https://books.google.com/books?id=JLyCo3RO4qUC}}
+
+@book{Von-Neumann2018,
+	author = {{Von Neumann}, John},
+	date-added = {2023-08-02 09:18:43 -0400},
+	date-modified = {2023-08-02 09:20:02 -0400},
+	editor = { Nicholas A. Wheeler},
+	note = {2018 Reprint with TeX, Translated by Robert T. Beyer},
+	publisher = {Princeton university press},
+	title = {Mathematical foundations of quantum mechanics: New edition},
+	year = {2018}}
+
+@article{Duncan2009,
+	author = {Anthony Duncan and Michel Janssen},
+	date-added = {2023-08-02 09:11:48 -0400},
+	date-modified = {2023-08-02 09:11:51 -0400},
+	doi = {10.1016/j.shpsb.2009.07.001},
+	journal = {Studies in History and Philosophy of Science Part B: Studies in History and Philosophy of Modern Physics},
+	number = {4},
+	pages = {352--362},
+	publisher = {Elsevier {BV}},
+	title = {From canonical transformations to transformation theory, 1926{\textendash}1927: The road to Jordan{\textquotesingle}s Neue Begr{\"u}ndung},
+	url = {https://doi.org/10.1016%2Fj.shpsb.2009.07.001},
+	volume = {40},
+	year = 2009,
+	bdsk-url-1 = {https://doi.org/10.1016%2Fj.shpsb.2009.07.001},
+	bdsk-url-2 = {https://doi.org/10.1016/j.shpsb.2009.07.001}}
 
 @article{Urbanowski2017,
 	author = {Krzysztof Urbanowski},
@@ -1633,10 +1671,10 @@
 	bdsk-url-1 = {https://link.aps.org/doi/10.1103/PhysRevLett.70.2359},
 	bdsk-url-2 = {https://doi.org/10.1103/PhysRevLett.70.2359}}
 
-@book{DerWaerden1968,
-	author = {Van Der Waerden, Bartel Leendert},
+@book{VanDerWaerden1968,
+	author = {Bartel Leendert  {Van Der Waerden}},
 	date-added = {2023-07-24 08:15:34 -0400},
-	date-modified = {2023-07-24 08:16:07 -0400},
+	date-modified = {2023-08-02 09:16:19 -0400},
 	publisher = {Dover},
 	title = {Sources of quantum mechanics},
 	year = {1968}}
