--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,33 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-02 09:22:29 -0400 
+%% Created for Pete Su at 2023-08-02 09:26:14 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Ward2006,
+	author = {Ward, David W and Volkmer, Sabine M},
+	date-added = {2023-08-02 09:25:40 -0400},
+	date-modified = {2023-08-02 09:26:14 -0400},
+	journal = {arXiv preprint },
+	note = {\href{https://arxiv.org/abs/physics/0610121}{arxiv:physics/0610121}},
+	title = {How to derive the schrodinger equation},
+	year = {2006}}
+
+@book{Wachter2011,
+	author = {Armin Wachter},
+	date-added = {2023-08-02 09:24:44 -0400},
+	date-modified = {2023-08-02 09:24:45 -0400},
+	doi = {10.1007/978-90-481-3645-2},
+	publisher = {Springer Netherlands},
+	title = {Relativistic Quantum Mechanics},
+	url = {https://doi.org/10.1007%2F978-90-481-3645-2},
+	year = 2011,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-90-481-3645-2},
+	bdsk-url-2 = {https://doi.org/10.1007/978-90-481-3645-2}}
 
 @book{Von-Neumann1955,
 	author = {{Von Neumann}, John},
@@ -5285,10 +5306,10 @@
 	bdsk-url-1 = {https://doi.org/10.1088%2F0143-0807%2F33%2F4%2F805},
 	bdsk-url-2 = {https://doi.org/10.1088/0143-0807/33/4/805}}
 
-@book{weinberg2013lectures,
+@book{Weinberg2013,
 	author = {Weinberg, S.},
 	date-added = {2019-07-06 07:43:20 -0400},
-	date-modified = {2019-07-06 07:43:20 -0400},
+	date-modified = {2023-08-02 09:24:53 -0400},
 	isbn = {9781107028722},
 	lccn = {2012030441},
 	publisher = {Cambridge University Press},
@@ -5297,11 +5318,11 @@
 	year = {2013},
 	bdsk-url-1 = {https://books.google.com/books?id=WfTq2W%5C_LBlEC}}
 
-@article{Weinberg:2016axv,
+@article{Weinberg2016,
 	archiveprefix = {arXiv},
 	author = {Weinberg, Steven},
 	date-added = {2019-07-06 07:41:55 -0400},
-	date-modified = {2019-07-06 07:42:20 -0400},
+	date-modified = {2023-08-02 09:24:55 -0400},
 	doi = {10.1103/PhysRevA.93.032124},
 	eprint = {1603.06008},
 	journal = {Phys. Rev.},
@@ -5315,11 +5336,11 @@
 	year = {2016},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevA.93.032124}}
 
-@article{Weinberg:2014ewa,
+@article{Weinberg2014,
 	archiveprefix = {arXiv},
 	author = {Weinberg, Steven},
 	date-added = {2019-07-06 07:20:52 -0400},
-	date-modified = {2019-07-06 07:21:39 -0400},
+	date-modified = {2023-08-02 09:24:58 -0400},
 	doi = {10.1103/PhysRevA.90.042102},
 	eprint = {1405.3483},
 	journal = {Phys. Rev.},
