--- a/physics-0610121/Schrodinger_v3.tex
+++ b/physics-0610121/Schrodinger_v3.tex
@@ -32,12 +32,12 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=1in, foot=.5in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.5in, bottom=1in, foot=.5in]{geometry}
 \tolerance=2000
 \hbadness=2000
 
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/mnsymbol.tex}
+%\input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
 
  \global\count\footins=1000
@@ -61,7 +61,6 @@ Technology, Cambridge, Massachusetts 02139}
 
 \date{ 17 Oct 2006 }% It is always \today, today,
              %  but any date may be explicitly specified
-
 
 \begin{abstract}
 We illustrate a simple derivation of the Schr\"{o}dinger equation,
