bib 567. QM done

--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,81 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-02 09:43:27 -0400 
+%% Created for Pete Su at 2023-08-02 13:08:21 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Zwiebach2022,
+	author = {Zwiebach, Barton},
+	date-added = {2023-08-02 13:08:00 -0400},
+	date-modified = {2023-08-02 13:08:21 -0400},
+	note = {Draft of chapter 4},
+	publisher = {MIT Press},
+	title = {Mastering Quantum Mechanics: Essentials, Theory, and Applications},
+	year = {2022}}
+
+@article{Zalamea2016,
+	author = {Zalamea, Federico},
+	date-added = {2023-08-02 13:06:33 -0400},
+	date-modified = {2023-08-02 13:07:06 -0400},
+	journal = {arXiv preprint},
+	note = {\href{https://arxiv.org/abs/1612.02959}{arxiv:1612.02959}},
+	title = {Chasing individuation: mathematical description of physical systems},
+	year = {2016}}
+
+@article{Yabuki1986,
+	author = {Yabuki, Haruichi},
+	date-added = {2023-08-02 13:05:32 -0400},
+	date-modified = {2023-08-02 13:05:33 -0400},
+	journal = {International journal of theoretical physics},
+	pages = {159--174},
+	publisher = {Springer},
+	title = {Feynman path integrals in the young double-slit experiment},
+	volume = {25},
+	year = {1986}}
+
+@article{Wigner1939,
+	author = {E. Wigner},
+	date-added = {2023-08-02 13:03:01 -0400},
+	date-modified = {2023-08-02 13:03:03 -0400},
+	doi = {10.2307/1968551},
+	journal = {The Annals of Mathematics},
+	number = {1},
+	pages = {149},
+	publisher = {{JSTOR}},
+	title = {On Unitary Representations of the Inhomogeneous Lorentz Group},
+	url = {https://doi.org/10.2307%2F1968551},
+	volume = {40},
+	year = 1939,
+	bdsk-url-1 = {https://doi.org/10.2307%2F1968551},
+	bdsk-url-2 = {https://doi.org/10.2307/1968551}}
+
+@book{Whitaker2012,
+	author = {Whitaker, A.},
+	date-added = {2023-08-02 13:01:37 -0400},
+	date-modified = {2023-08-02 13:01:38 -0400},
+	isbn = {9780199589135},
+	lccn = {2011933687},
+	publisher = {OUP Oxford},
+	title = {The New Quantum Age: From Bell's Theorem to Quantum Computation and Teleportation},
+	url = {https://books.google.com/books?id=s8TAj8BZAwYC},
+	year = {2012},
+	bdsk-url-1 = {https://books.google.com/books?id=s8TAj8BZAwYC}}
+
+@book{Whitaker2006,
+	author = {Whitaker, A.},
+	date-added = {2023-08-02 12:59:37 -0400},
+	date-modified = {2023-08-02 12:59:39 -0400},
+	isbn = {9780521671026},
+	lccn = {2006283893},
+	publisher = {Cambridge University Press},
+	title = {Einstein, Bohr and the Quantum Dilemma: From Quantum Theory to Quantum Information},
+	url = {https://books.google.com/books?id=\_gBUUQ1\_ThoC},
+	year = {2006},
+	bdsk-url-1 = {https://books.google.com/books?id=%5C_gBUUQ1%5C_ThoC}}
 
 @misc{WheelerNotes,
 	author = {Nicholas Wheeler},
@@ -44,7 +113,7 @@
 	author = {Ward, David W and Volkmer, Sabine M},
 	date-added = {2023-08-02 09:25:40 -0400},
 	date-modified = {2023-08-02 09:26:14 -0400},
-	journal = {arXiv preprint },
+	journal = {arXiv preprint},
 	note = {\href{https://arxiv.org/abs/physics/0610121}{arxiv:physics/0610121}},
 	title = {How to derive the schrodinger equation},
 	year = {2006}}
@@ -77,7 +146,7 @@
 	author = {{Von Neumann}, John},
 	date-added = {2023-08-02 09:18:43 -0400},
 	date-modified = {2023-08-02 09:20:02 -0400},
-	editor = { Nicholas A. Wheeler},
+	editor = {Nicholas A. Wheeler},
 	note = {2018 Reprint with TeX, Translated by Robert T. Beyer},
 	publisher = {Princeton university press},
 	title = {Mathematical foundations of quantum mechanics: New edition},
@@ -1725,7 +1794,7 @@
 	bdsk-url-2 = {https://doi.org/10.1103/PhysRevLett.70.2359}}
 
 @book{VanDerWaerden1968,
-	author = {Bartel Leendert  {Van Der Waerden}},
+	author = {Bartel Leendert {Van Der Waerden}},
 	date-added = {2023-07-24 08:15:34 -0400},
 	date-modified = {2023-08-02 09:16:19 -0400},
 	publisher = {Dover},
