--- a/bib.bib
+++ b/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-02 13:08:21 -0400 
+%% Created for Pete Su at 2023-08-02 13:16:37 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,12 +10,21 @@
 
 @book{Zwiebach2022,
 	author = {Zwiebach, Barton},
-	date-added = {2023-08-02 13:08:00 -0400},
-	date-modified = {2023-08-02 13:08:21 -0400},
-	note = {Draft of chapter 4},
+	date-added = {2023-08-02 13:13:16 -0400},
+	date-modified = {2023-08-02 13:13:16 -0400},
 	publisher = {MIT Press},
 	title = {Mastering Quantum Mechanics: Essentials, Theory, and Applications},
 	year = {2022}}
+
+@misc{Zwiebach2018,
+	author = {Zwiebach, Barton},
+	date-added = {2023-08-02 13:08:00 -0400},
+	date-modified = {2023-08-02 13:14:06 -0400},
+	howpublished = {Online Notes},
+	note = {\href{https://ocw.mit.edu/courses/8-06-quantum-physics-iii-spring-2018/pages/lecture-notes/}{Download}},
+	publisher = {MIT Press},
+	title = {{Time Dependent Perturbation Theory}},
+	year = {2018}}
 
 @article{Zalamea2016,
 	author = {Zalamea, Federico},
@@ -2606,20 +2615,6 @@
 	publisher = {Springer Nature},
 	title = {The cellular automaton interpretation of quantum mechanics},
 	year = {2016}}
-
-@article{bouman2018reconstructing,
-	author = {Bouman, Katherine L and Johnson, Michael D and Dalca, Adrian V and Chael, Andrew A and Roelofs, Freek and Doeleman, Sheperd S and Freeman, William T},
-	date-added = {2023-07-21 08:02:41 -0400},
-	date-modified = {2023-07-21 08:04:03 -0400},
-	journal = {IEEE Transactions on Computational Imaging},
-	keywords = {black holes},
-	note = {\href{https://arxiv.org/abs/1711.01357}{arxiv:1711.01357}},
-	number = {4},
-	pages = {512--527},
-	publisher = {IEEE},
-	title = {Reconstructing video of time-varying sources from radio interferometric measurements},
-	volume = {4},
-	year = {2018}}
 
 @book{bergstrom2006cosmology,
 	author = {Bergstr{\"o}m, Lars and Goobar, Ariel},
