--- a/1512.01413/CHIRP.tex
+++ b/1512.01413/CHIRP.tex
@@ -50,6 +50,11 @@
 \sloppy
 \raggedbottom
 \pagestyle{plain}
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{cite}
+\usepackage{microtype}
 
 % Include other packages here, before hyperref.
 
@@ -82,8 +87,6 @@ pagebackref=true,breaklinks=true
 
 \pagenumbering{gobble}
 
-% Pages are numbered in submission mode, and unnumbered in camera-ready
-\ifcvprfinal\pagestyle{empty}\fi
 \begin{document}
 
 %%%%%%%%% TITLE
