adjust psychotic figure usage

--- a/1512.01413/method.tex
+++ b/1512.01413/method.tex
@@ -1,20 +1,6 @@
 \section{Method}
 \label{section:Method}
 
-\begin{figure}[b]
-	\centering
-	%\fcolorbox{bordercolor}{paddingcolor}{image}
-	\fcolorbox{red}{red}{\includegraphics[width=0.2\linewidth]{ex2.png}}
-	\fcolorbox{green}{green}{\includegraphics[width=0.2\linewidth]{deltaPulses_ex2_big.png}}
-	\fcolorbox{cyan}{cyan}{\includegraphics[width=0.2\linewidth]{rectPulses_ex2.png}}
-	\fcolorbox{blue}{blue}{\includegraphics[width=0.2\linewidth]{trianglePulses_ex2.png}}
-	
-	\includegraphics[width=0.95\linewidth]{freqfig_9pulses_wrect_zoom_ex2_2.pdf}
-	\caption{\footnotesize{Accurately modeling the frequencies of an image is crucial for fitting VLBI measurements during image reconstruction. Here we show, that with the same number of parameters, we can much more accurately model the true frequency distribution. A slice of frequencies for the true image is shown in red. Overlayed we show the effect of using the traditional discretized imaging model (green), and our improved model for rectangle (cyan) and triangle (blue) pulses. The dotted lines denote the frequency range sampled in Fig~\ref{fig:uvcov}b. Representing an image in this way reduces modeling errors for higher frequencies during image reconstruction.}}
-	\label{fig:pulses}
-\end{figure}
-
-			
 %In this section we describe our proposed algorithm for reconstructing an image using bispectrum measurements.
 % obtained using a VLBI telescope array. 
 Reconstructing an image using bispectrum measurements is an ill-posed problem, and as such there are an infinite number of possible images that explain the data~\cite{rusenimaging}. 
@@ -118,7 +104,20 @@ we parameterize our space into $N_\ell \times N_m$ scaled pulse functions, $h(l,
 		\label{eq:formodel}
 		\end{align}
 
- 
+\begin{figure}[tb]
+	\centering
+	%\fcolorbox{bordercolor}{paddingcolor}{image}
+	\fcolorbox{red}{red}{\includegraphics[width=0.2\linewidth]{ex2.png}}
+	\fcolorbox{green}{green}{\includegraphics[width=0.2\linewidth]{deltaPulses_ex2_big.png}}
+	\fcolorbox{cyan}{cyan}{\includegraphics[width=0.2\linewidth]{rectPulses_ex2.png}}
+	\fcolorbox{blue}{blue}{\includegraphics[width=0.2\linewidth]{trianglePulses_ex2.png}}
+	
+	\includegraphics[width=0.95\linewidth]{freqfig_9pulses_wrect_zoom_ex2_2.pdf}
+	\caption{\footnotesize{Accurately modeling the frequencies of an image is crucial for fitting VLBI measurements during image reconstruction. Here we show, that with the same number of parameters, we can much more accurately model the true frequency distribution. A slice of frequencies for the true image is shown in red. Overlayed we show the effect of using the traditional discretized imaging model (green), and our improved model for rectangle (cyan) and triangle (blue) pulses. The dotted lines denote the frequency range sampled in Fig~\ref{fig:uvcov}b. Representing an image in this way reduces modeling errors for higher frequencies during image reconstruction.}}
+	\label{fig:pulses}
+\end{figure}
+
+			 
 In Figure~\ref{fig:pulses} we show that this representation allows us to approximate the true frequency components more accurately than a discretized set of point sources, especially for high frequencies.  
 %In optimization, this formulation asks us to find the best set of coefficients $X[i,j]$ to explain $I_{\lambda}(\ell, m)$ under the assumed pulse model. 
 Any pulse with a continuous closed-form Fourier transform can be used in this representation (e.g. rectangle, triangle, sinc, Gaussian). The chosen pulse places an implicit prior on the reconstruction. For instance, a sinc pulse with frequency and spacing $\Delta$ can reconstruct any signal with a bandwidth less than $\frac{\Delta}{2}$~\cite{oppenheim1997signals}. In this work we choose to use a triangle pulse with width $(2\Delta_\ell, 2\Delta_m)$ since this is equivalent to linearly interpolating between pulse centers and also simplifies 
