--- a/bib.bib
+++ b/bib.bib
@@ -1,21 +1,45 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-02 13:26:29 -0400 
+%% Created for Pete Su at 2023-08-02 14:35:25 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@book{Bisnovatyi-Kogan2002,
+	author = {G. S. Bisnovatyi-Kogan},
+	date-added = {2023-08-02 14:33:44 -0400},
+	date-modified = {2023-08-02 14:33:47 -0400},
+	doi = {10.1007/978-3-662-22639-1},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Stellar Physics},
+	url = {https://doi.org/10.1007%2F978-3-662-22639-1},
+	year = 2002,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-662-22639-1},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-662-22639-1}}
+
+@book{Bisnovatyi-Kogan2011,
+	author = {Gennady S. Bisnovatyi-Kogan},
+	date-added = {2023-08-02 14:32:57 -0400},
+	date-modified = {2023-08-02 14:32:59 -0400},
+	doi = {10.1007/978-3-642-14734-0},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Stellar Physics},
+	url = {https://doi.org/10.1007%2F978-3-642-14734-0},
+	year = 2011,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-642-14734-0},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-642-14734-0}}
+
 @inproceedings{Bouman2016,
 	author = {Bouman, Katherine L. and Johnson, Michael D. and Zoran, Daniel and Fish, Vincent L. and Doeleman, Sheperd S. and Freeman, William T.},
 	booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
 	date-added = {2023-08-02 13:25:57 -0400},
-	date-modified = {2023-08-02 13:26:29 -0400},
+	date-modified = {2023-08-02 14:16:46 -0400},
 	month = {June},
 	note = {\href{https://arxiv.org/abs/1512.01413}{arxiv:1512.01413}},
-	title = {Computational Imaging for VLBI Image Reconstruction},
+	title = {{Computational Imaging for VLBI Image Reconstruction}},
 	year = {2016}}
 
 @book{Zwiebach2022,
@@ -2626,10 +2650,10 @@
 	title = {The cellular automaton interpretation of quantum mechanics},
 	year = {2016}}
 
-@book{bergstrom2006cosmology,
+@book{Bergstrom2006,
 	author = {Bergstr{\"o}m, Lars and Goobar, Ariel},
 	date-added = {2023-07-21 07:48:03 -0400},
-	date-modified = {2023-07-21 07:48:03 -0400},
+	date-modified = {2023-08-02 14:35:24 -0400},
 	publisher = {Springer Science \& Business Media},
 	title = {Cosmology and particle astrophysics},
 	year = {2006}}
@@ -5802,7 +5826,7 @@
 @article{Bouman2018,
 	author = {K. L. {Bouman} and M. D. {Johnson} and A. V. {Dalca} and A. A. {Chael} and F. {Roelofs} and S. S. {Doeleman} and W. T. {Freeman}},
 	date-added = {2019-04-10 21:51:25 -0400},
-	date-modified = {2019-04-10 21:52:13 -0400},
+	date-modified = {2023-08-02 14:16:53 -0400},
 	doi = {10.1109/TCI.2018.2838452},
 	issn = {2333-9403},
 	journal = {IEEE Transactions on Computational Imaging},
@@ -5810,7 +5834,7 @@
 	note = {\href{https://arxiv.org/abs/1711.01357}{arxiv:1711.01357}},
 	number = {4},
 	pages = {512-527},
-	title = {Reconstructing Video of Time-Varying Sources From Radio Interferometric Measurements},
+	title = {{Reconstructing Video of Time-Varying Sources From Radio Interferometric Measurements}},
 	volume = {4},
 	year = {2018},
 	bdsk-url-1 = {https://doi.org/10.1109/TCI.2018.2838452}}
