--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,199 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-03 09:41:15 -0400 
+%% Created for Pete Su at 2023-08-03 10:01:34 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Bennett1996,
+	author = {Charles H. Bennett and Herbert J. Bernstein and Sandu Popescu and Benjamin Schumacher},
+	date-added = {2023-08-03 10:01:20 -0400},
+	date-modified = {2023-08-03 10:01:31 -0400},
+	doi = {10.1103/physreva.53.2046},
+	journal = {Phys. Rev. A},
+	note = {\href{https://arxiv.org/abs/quant-ph/9511030}{arxiv:quant-ph/9511030}},
+	number = {4},
+	pages = {2046--2052},
+	publisher = {American Physical Society ({APS})},
+	title = {Concentrating partial entanglement by local operations},
+	url = {https://doi.org/10.1103%2Fphysreva.53.2046},
+	volume = {53},
+	year = 1996,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysreva.53.2046},
+	bdsk-url-2 = {https://doi.org/10.1103/physreva.53.2046}}
+
+@article{Bekenstein1974,
+	author = {Jacob D. Bekenstein},
+	date-added = {2023-08-03 10:00:40 -0400},
+	date-modified = {2023-08-03 10:00:41 -0400},
+	doi = {10.1103/physrevd.9.3292},
+	journal = {Phys. Rev. D},
+	number = {12},
+	pages = {3292--3300},
+	publisher = {American Physical Society ({APS})},
+	title = {Generalized second law of thermodynamics in black-hole physics},
+	url = {https://doi.org/10.1103%2Fphysrevd.9.3292},
+	volume = {9},
+	year = 1974,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.9.3292},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.9.3292}}
+
+@article{Bekenstein1994,
+	author = {Bekenstein, Jacob D},
+	date-added = {2023-08-03 09:58:58 -0400},
+	date-modified = {2023-08-03 09:59:36 -0400},
+	journal = {arXiv preprint},
+	note = {\href{https://arxiv.org/abs/gr-qc/9409015}{arxiv:gr-qc/9409015}},
+	title = {Do we understand black hole entropy?},
+	year = {1994}}
+
+@article{Bekenstein1973,
+	author = {Jacob D. Bekenstein},
+	date-added = {2023-08-03 09:57:46 -0400},
+	date-modified = {2023-08-03 09:57:48 -0400},
+	doi = {10.1103/physrevd.7.2333},
+	journal = {Phys. Rev. D},
+	number = {8},
+	pages = {2333--2346},
+	publisher = {American Physical Society ({APS})},
+	title = {Black Holes and Entropy},
+	url = {https://doi.org/10.1103%2Fphysrevd.7.2333},
+	volume = {7},
+	year = 1973,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.7.2333},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.7.2333}}
+
+@article{Barbado2011,
+	author = {L. C. Barbado and C. Barcel{\'{o}} and L. J. Garay and G. Jannes},
+	date-added = {2023-08-03 09:54:40 -0400},
+	date-modified = {2023-08-03 09:54:42 -0400},
+	doi = {10.1007/jhep11(2011)112},
+	journal = {J. High Energ. Phys.},
+	note = {\href{https://arxiv.org/abs/1109.3593}{arxiv:1109.3593}},
+	number = {11},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {The trans-Planckian problem as a guiding principle},
+	url = {https://doi.org/10.1007%2Fjhep11%282011%29112},
+	volume = {2011},
+	year = 2011,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep11%282011%29112},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep11(2011)112}}
+
+@book{Bar2009,
+	date-added = {2023-08-03 09:53:42 -0400},
+	date-modified = {2023-08-03 09:53:54 -0400},
+	doi = {10.1007/978-3-642-02780-2},
+	editor = {Christian B{\"a}r and Klaus Fredenhagen},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Quantum Field Theory on Curved Spacetimes},
+	url = {https://doi.org/10.1007%2F978-3-642-02780-2},
+	year = 2009,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-642-02780-2},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-642-02780-2}}
+
+@article{Banks1984,
+	author = {Banks, Thomas and Susskind, Leonard and Peskin, Michael E},
+	date-added = {2023-08-03 09:53:14 -0400},
+	date-modified = {2023-08-03 09:53:15 -0400},
+	journal = {Nuclear Physics B},
+	number = {1},
+	pages = {125--134},
+	publisher = {Elsevier},
+	title = {Difficulties for the evolution of pure states into mixed states},
+	volume = {244},
+	year = {1984}}
+
+@article{Balasubramanian2014,
+	author = {Vijay Balasubramanian and Patrick Hayden and Alexander Maloney and Donald Marolf and Simon F Ross},
+	date-added = {2023-08-03 09:52:45 -0400},
+	date-modified = {2023-08-03 09:52:47 -0400},
+	doi = {10.1088/0264-9381/31/18/185015},
+	journal = {Class. Quantum Grav.},
+	note = {\href{https://arxiv.org/abs/1406.2663}{arxiv:1406.2663}},
+	number = {18},
+	pages = {185015},
+	publisher = {{IOP} Publishing},
+	title = {Multiboundary wormholes and holographic entanglement},
+	url = {https://doi.org/10.1088%2F0264-9381%2F31%2F18%2F185015},
+	volume = {31},
+	year = 2014,
+	bdsk-url-1 = {https://doi.org/10.1088%2F0264-9381%2F31%2F18%2F185015},
+	bdsk-url-2 = {https://doi.org/10.1088/0264-9381/31/18/185015}}
+
+@article{Balasubramanian2013,
+	author = {Vijay Balasubramanian and Borun D. Chowdhury and Bartlomiej Czech and Jan de Boer},
+	date-added = {2023-08-03 09:51:46 -0400},
+	date-modified = {2023-08-03 09:51:49 -0400},
+	doi = {10.1007/jhep10(2013)220},
+	journal = {J. High Energ. Phys.},
+	note = {\href{https://arxiv.org/abs/1305.0856v2}{arxiv:1305.0856v2}},
+	number = {10},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {The entropy of a hole in spacetime},
+	url = {https://doi.org/10.1007%2Fjhep10%282013%29220},
+	volume = {2013},
+	year = 2013,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep10%282013%29220},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep10(2013)220}}
+
+@article{Audretsch1994,
+	author = {J{\"u}rgen Audretsch and Rainer M{\"u}ller},
+	date-added = {2023-08-03 09:50:11 -0400},
+	date-modified = {2023-08-03 09:50:13 -0400},
+	doi = {10.1103/physrevd.49.6566},
+	journal = {Phys. Rev. D},
+	number = {12},
+	pages = {6566--6575},
+	publisher = {American Physical Society ({APS})},
+	title = {Radiation from a uniformly accelerated particle detector: Energy, particles, and the quantum measurement process},
+	url = {https://doi.org/10.1103%2Fphysrevd.49.6566},
+	volume = {49},
+	year = 1994,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.49.6566},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.49.6566}}
+
+@article{Zyczkowski2006,
+	author = {Zyczkowski, Karol and Bengtsson, Ingemar},
+	date-added = {2023-08-03 09:47:35 -0400},
+	date-modified = {2023-08-03 09:47:37 -0400},
+	journal = {arXiv preprint quant-ph/0606228},
+	title = {An introduction to quantum entanglement: a geometric approach},
+	year = {2006}}
+
+@article{Almheiri2013,
+	author = {Ahmed Almheiri and Donald Marolf and Joseph Polchinski and James Sully},
+	date-added = {2023-08-03 09:43:41 -0400},
+	date-modified = {2023-08-03 09:43:52 -0400},
+	doi = {10.1007/jhep02(2013)062},
+	journal = {J. High Energ. Phys.},
+	note = {\href{https://arxiv.org/abs/1207.3123}{arxiv:1207.3123}},
+	number = {2},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Black holes: complementarity or firewalls?},
+	url = {https://doi.org/10.1007%2Fjhep02%282013%29062},
+	volume = {2013},
+	year = 2013,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep02%282013%29062},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep02(2013)062}}
+
+@article{Almheiri2013a,
+	author = {Ahmed Almheiri and Donald Marolf and Joseph Polchinski and Douglas Stanford and James Sully},
+	date-added = {2023-08-03 09:42:49 -0400},
+	date-modified = {2023-08-03 09:43:46 -0400},
+	doi = {10.1007/jhep09(2013)018},
+	journal = {J. High Energ. Phys.},
+	note = {\href{https://arxiv.org/abs/1304.6483}{arxiv:1304.6483}},
+	number = {9},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {{An apologia for firewalls}},
+	url = {https://doi.org/10.1007%2Fjhep09%282013%29018},
+	volume = {2013},
+	year = 2013,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep09%282013%29018},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep09(2013)018}}
 
 @article{Almheiri2020a,
 	author = {Ahmed Almheiri and Raghu Mahajan and Juan Maldacena and Ying Zhao},
@@ -2448,10 +2635,10 @@
 	title = {Quantum mechanics},
 	year = {2005}}
 
-@book{Basdevant_2016,
+@book{Basdevant2016,
 	author = {Jean-Louis Basdevant},
 	date-added = {2023-07-22 21:22:03 -0400},
-	date-modified = {2023-07-22 21:22:03 -0400},
+	date-modified = {2023-08-03 09:57:16 -0400},
 	doi = {10.1007/978-3-319-43479-7},
 	publisher = {Springer International Publishing},
 	title = {Lectures on Quantum Mechanics},
@@ -4325,23 +4512,6 @@
 	volume = {106},
 	year = {2011},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevLett.106.110404}}
-
-@article{Barbado:2011ai,
-	archiveprefix = {arXiv},
-	author = {Barbado, Luis C. and Barcelo, Carlos and Garay, Luis J. and Jannes, Gil},
-	date-added = {2019-12-01 09:20:14 -0500},
-	date-modified = {2023-07-15 16:44:09 -0400},
-	doi = {10.1007/JHEP11(2011)112},
-	eprint = {1109.3593},
-	journal = {JHEP},
-	note = {\href{https://arxiv.org/abs/1109.3593}{arxiv:abs/1109.3593}},
-	pages = {112},
-	primaryclass = {gr-qc},
-	slaccitation = {%%CITATION = ARXIV:1109.3593;%%},
-	title = {{The Trans-Planckian problem as a guiding principle}},
-	volume = {11},
-	year = {2011},
-	bdsk-url-1 = {https://doi.org/10.1007/JHEP11(2011)112}}
 
 @article{Stephens:1993an,
 	archiveprefix = {arXiv},
