--- a/0907.0739/paper.tex
+++ b/0907.0739/paper.tex
@@ -1,19 +1,37 @@
 \documentclass[aps,prl,amsmath,amssymb,floatfix,12pt]{revtex4}
 
-\usepackage{mathpazo}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
+,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
 ,filecolor=blue
 ,linkcolor=blue
 ,menucolor=blue
-,pagecolor=blue
-,linktocpage=true
-bookmarksopen=false,bookmarksnumbered=false, bookmarks=false]{hyperref}
-\usepackage[letterpaper, margin=1.25in]{geometry}
-\usepackage{psfrag}
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}\usepackage{psfrag}
 \usepackage[dvips]{graphicx}
 
 \begin{document}
